# autoanchorjs

./: .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/: FUNDING.yml
examples/: advanced-usage.js  basic-usage.js
rust/: Cargo.toml
rust/examples/: save_screenshot.rs
rust/src/: lib.rs
rust/src/keyboard/: mod.rs  windows.rs
rust/src/mouse/: windows.rs
rust/src/screen/: windows.rs
rust/tests/: take_screenshot_integration.rs
scripts/: build-all.js  build-cross-platform.js  copy-binaries.js
src/: index.ts
src/__tests__/: autoanchor.test.ts  integration.test.ts
