[package]
name = "autoanchor-core"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Cross-platform automation library for cursor, mouse, and keyboard control"
license = "MIT"
repository = "https://github.com/yourusername/autoanchorjs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "errhandlingapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
libc = "0.2"

[lib]
name = "autoanchor_core"
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
name = "autoanchor"
path = "src/bin/autoanchor.rs"
